<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:id="@+id/fragment_identity">

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_horizontal_tab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="@dimen/guideline_horizontal_tab" />

  <ScrollView
    android:id="@+id/identity_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    android:layout_marginTop="@dimen/election_setup_scrollview_layout_margin_top"
    app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_tab">

    <LinearLayout
      android:id="@+id/identity_ll"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintTop_toBottomOf="@id/identity_scrollview">

      <!-- Checkbox and explanation -->

      <CheckBox
        android:id="@+id/checkbox_anonymous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/identity_anonymous"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal_tab" />

      <TextView
        android:id="@+id/anonymous_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_text"
        android:text="@string/anonymous_explanation"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_anonymous" />

      <!-- Name, Title, Organization, E-mail, Phone -->

      <EditText
        android:id="@+id/identity_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_text"
        android:hint="@string/identity_name"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/anonymous_explanation"
        android:inputType="textPersonName"
        android:autofillHints="false" />

      <EditText
        android:id="@+id/identity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_text"
        android:hint="@string/identity_title"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/identity_name"
        android:inputType="text"
        android:autofillHints="false" />

      <EditText
        android:id="@+id/identity_organization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_text"
        android:hint="@string/identity_organization"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/identity_title"
        android:inputType="text"
        android:autofillHints="false" />

      <EditText
        android:id="@+id/identity_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_text"
        android:hint="@string/identity_email"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/identity_organization"
        android:inputType="textEmailAddress"
        android:autofillHints="false" />

      <EditText
        android:id="@+id/identity_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_text"
        android:hint="@string/identity_phone"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/identity_email"
        android:inputType="phone"
        android:autofillHints="false" />

      <!-- QR code -->

      <ImageView
        android:id="@+id/qr_code"
        android:layout_width="@dimen/qr_code_size"
        android:layout_height="@dimen/qr_code_size"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/identity_phone" />
    </LinearLayout>

  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
