<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/fragment_camera_perm"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline_horizontal"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="@dimen/guideline_horizontal_tab" />

    <LinearLayout
      android:id="@+id/camera_permission"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="vertical"
      app:layout_constrainedHeight="true"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toBottomOf="@id/guideline_horizontal">

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_text"
        android:text="@string/allow_camera_text"
        style="@style/explication_text_style" />

      <Button
        android:id="@+id/allow_camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/allow_camera_button"
        android:textColor="@android:color/white"
        android:textSize="@dimen/size_section_title" />

    </LinearLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
